ローカルのテキストファイル読み込み成功

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
 <button onclick="location.href='/ranking'">ランキング</button>
 <h3>初めての方</h3>
 <button onclick="location.href='/create'">新規登録</button>
-<h6>ミニゲーム</h6>
-<button onclick="location.href='/'">comming soon</button>
+<h6>下記は製作者以外触らないでください</h6>
+<button onclick="location.href='/debug'">デバック</button>
 {% endblock %}
