借金機能 追加

--- a/templates/error.html
+++ b/templates/error.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <h1>Error</h1>
-<p>{{error_text}}</p>
+<p>{{text}}</p>
 <button onclick="history.back()">戻る</button>
 {% endblock %}
