--- a/templates/bank.html
+++ b/templates/bank.html
@@ -3,7 +3,9 @@
 
 {% block content %}
 <h1>{{name}}さん。ご利用ありがとうございます。</h1>
-<button onclick="location.href='/{{name}}/withdrawal'">引き出し</button>
-<button onclick="location.href='/{{name}}/deposit'">預け入れ</button>
+<button onclick="location.href='/{{name}}/bank/withdrawal'">引き出し</button>
+<p></p>
+<button onclick="location.href='/{{name}}/bank/deposit'">預け入れ</button>
+<p></p>
 <button onclick="history.back()">戻る</button>
 {% endblock %}
