--- a/templates/acomn copy.html
+++ b/templates/acomn copy.html
@@ -3,11 +3,8 @@
 
 {% block content %}
 <h1>こちらアコムンです。</h1>
-{% if debt == 0 %}
-    <h2>{{name}}さんの負債はありません。</h2>
-{% else %}
-    <h2>{{name}}さんは現在 ${{debt}} の負債があります。</h2>
-{% endif %}
+<h2>{{name}}さんに $1,000 の融資をいたしました。</h2>
+<h2>ランキングよりご確認ください。</h2>
 
 <button onclick="location.href='/ranking'">戻る</button>
 {% endblock %}
