--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -9,7 +9,7 @@
 </form>
 <button onclick="history.back()">戻る</button>
 
-{% if money == 0 %}
-    <a href="/{{name}}/bank/withdrawal/acomn"><h4><font color="red">初めてのアコムン</font></h4></a>
+{% if money == 0 or debt > 0 %}
+    <a href="/{{name}}/bank/acomn"><h4><font color="red">初めてのアコムン</font></h4></a>
 {% endif %}
 {% endblock %}
