cssちょっと変更

--- a/templates/bank.html
+++ b/templates/bank.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>{{name}}さん。ご利用ありがとうございます。</h1>
 {% if visit_flg %}
-    <a href="/{{name}}/login_check">ログインボーナスはこちらをクリック</a><br><br>
+    <a class="button" href="/{{name}}/login_check">ログインボーナスはこちらをクリック</a><br><br>
 {% endif %}
 
 <button onclick="location.href='/{{name}}/bank/withdrawal'">引き出し</button>
