--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <h1>引き出し</h1>
+<h3>残高 : {{money}}</h3>
 <form method="POST">
     <input type="text" name="entry">
     <input type="submit" value="確定">
