bankなどに常に残高,借金表示

--- a/templates/bank.html
+++ b/templates/bank.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <h1>{{name}}さん。ご利用ありがとうございます。</h1>
+<h3>残高 : {{money}} 借金 : {{debt * 1000}}</h3>
 {% if visit_flg %}
     <a class="button" href="/{{name}}/login_check">ログインボーナスはこちらをクリック</a><br><br>
 {% endif %}
