--- a/templates/deposit.html
+++ b/templates/deposit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1>預け入れ</h1>
-<h3>残高 : {{money}}</h3>
+<h3>残高 : {{money}} 借金 : {{debt * 1000}}</h3>
 <form method="POST">
     <input type="text" name="entry">
     <input type="submit" value="確定">
