純資産ランキング,index.htmlの変更

--- a/templates/acomn.html
+++ b/templates/acomn.html
@@ -13,5 +13,5 @@
 <button onclick="location.href='/{{name}}/bank/acomn/loan'">ご融資</button>
 <h5>利息:1回に付き$500</h5>
 <br>
-<button onclick="location.href='/ranking'">戻る</button>
+<button onclick="history.back()">戻る</button>
 {% endblock %}
