--- a/templates/acomn_loan.html
+++ b/templates/acomn_loan.html
@@ -11,5 +11,5 @@
     <h2>今一度、融資資格を確認の上、再度申請してください。</h2>
 {% endif %}
 
-<button onclick="location.href='/ranking'">戻る</button>
+<button onclick="history.back()">戻る</button>
 {% endblock %}
