--- a/templates/all_ranking.html
+++ b/templates/all_ranking.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1>総資産ランキング</h1>
-<button class="rank_button" onclick="location.href='/ranking'">ランキングへ戻る</button>
+<button class="rank_button" onclick="location.href='/'">ランキングへ戻る</button><br><br>
 {% if data == [] %}
     <p>ランキングはありません</p>
 {% else %}
