--- a/templates/debug.html
+++ b/templates/debug.html
@@ -9,5 +9,5 @@
     <input type="submit" value="実行">
 </form>
 <h1>****************</h1>
-<button onclick="location.href='/home'">戻る</button>
+<button onclick="location.href='/'">戻る</button>
 {% endblock %}
