--- a/templates/successed_repayment.html
+++ b/templates/successed_repayment.html
@@ -12,5 +12,5 @@
     <h3>残り ${{debt * 1500}} です。({{debt}}回)</h3>
     <h3>引き続きよろしくお願い致します。</h3>
 {% endif %}
-<button onclick="location.href='/ranking'">戻る</button>
+<button onclick="location.href='/'">戻る</button>
 {% endblock %}
