--- a/static/css/sample.css
+++ b/static/css/sample.css
@@ -8,17 +8,34 @@ table {
     border-collapse:  collapse; /* セルの線を重ねる */
 }
 
+a{
+    text-decoration: none;/* aタグの下線消す */
+}
+
 /* loginボーナス用ボタン設定 */
 
-.button {
+.login_button {
     font-size: 1.375rem;
     background: rgb(0, 221, 7);
     color: #fff;
     border-radius: 5px;
     padding: 18px 32px;
 }
-.button:hover {
+.login_button:hover {
     background: rgb(0, 119, 4);
+}
+
+/* acomnボタン設定 */
+
+.acomn_button {
+    font-size: 1.375rem;
+    background: rgb(221, 0, 0);
+    color: #fff;
+    border-radius: 5px;
+    padding: 8px 32px;
+}
+.acomn_button:hover {
+    background: rgb(195, 0, 0);
 }
 
 /* 総資産ランキング用 */
