--- a/templates/acomn_repayment.html
+++ b/templates/acomn_repayment.html
@@ -31,5 +31,5 @@
 </form>
 
 <br><br>
-<button onclick="location.href='/ranking'">戻る</button>
+<button onclick="history.back()">戻る</button>
 {% endblock %}
