--- a/templates/successed_create_account.html
+++ b/templates/successed_create_account.html
@@ -4,5 +4,5 @@
 {% block content %}
 <h1>アカウントが作成されました。</h1>
 <h3>{{name}}様に口座開設記念として $1,000 が振り込まれました。</h3>
-<button onclick="location.href='/home'">戻る</button>
+<button onclick="location.href='/'">戻る</button>
 {% endblock %}
