ルール一覧追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,10 @@
 ==========
 <h3>初めての方</h3>
 <button onclick="location.href='/create'">新規登録</button>
-<h6>下記は製作者以外触らないでください</h6>
+<br><br>
+ディーラー求人あります。詳しくは<a href="/job_offer">こちら</a>。<br>
+<a href="/rulebook">各種ルール一覧</a>
+<br><br>
+<h6>下記デバッグは製作者以外触らないでください</h6>
 <button onclick="location.href='/debug'">デバック</button>
-<br>
-メモ:ディーラー求人あります。詳しくはこちら<br>
-www.test
 {% endblock %}
