BJ奇数賭け解禁

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,11 +30,13 @@
 {% endif %}
 ==========
 <h3>初めての方</h3>
-<button onclick="location.href='/create'">新規登録</button>
-<br><br>
+<button onclick="location.href='/create'">新規登録</button><br>
+==========
+<br>
 ディーラー求人あります。詳しくは<a href="/job_offer">こちら</a>。<br>
-<a href="/rulebook">各種ルール一覧</a>
-<br><br>
+<a href="/rulebook">各種ルール一覧</a><br>
+==========
+<br>
 <h6>下記デバッグは製作者以外触らないでください</h6>
 <button onclick="location.href='/debug'">デバック</button>
 {% endblock %}
