--- a/templates/job_offer.html
+++ b/templates/job_offer.html
@@ -5,13 +5,13 @@
 <求人情報>
 <br><br>
 *BJ*<br>
-給与 = 基本給($10/game) + chip<br>
+給与 = 基本給($10/game) + tip<br>
 <br>
 *Buccarat*<br>
-給与 = 基本給($10/game) + chip + コミッション<br>
+給与 = 基本給($10/game) + tip + commission<br>
 <br>
 *No Commission Buccarat*<br>
-給与 = 基本給($10/game) + chip<br>
+給与 = 基本給($10/game) + tip<br>
 
 <br>
 *Pocker(Texas Hold'em)*
@@ -30,6 +30,7 @@
 求人なし<br>
 <br>
 <応募資格・諸注意><br>
+・やる気があること。<br>
 ・担当するゲームのルールを熟知していること。<br>
 ・HP内の"各種ルール一覧"を熟読していること。<br>
 ・不正発覚時は、相応のペナルティがあります。<br>
