--- a/templates/rulebook.html
+++ b/templates/rulebook.html
@@ -7,7 +7,7 @@
 <br>
 ・来店時、$10のログインボーナスあり！<br>
 >会員ランクによって最大 +$10 ボーナス！<br>
->さらにTOP3の方には +$10 ボーナス！<br>
+>さらにTOP3(純資産)の方には +$10 ボーナス！<br>
 (会員ランク内訳)<br>
 >ゴールドランク : 利用回数50%以上(+$10)<br>
 >シルバーランク : 利用回数10%以上(+$5)<br>
@@ -15,12 +15,13 @@
 
 <h3>*BJ*</h3>
 (Bet ルール)<br>
-SmallBet = $2, MaxBet = $1,000, ベット額は偶数限定。<br>
+Minimum Bet = $1, Maximum Bet = $1,000。<br>
 (基本ルール)<br>
 オプションは、Hit, Stay, Split, Double down, Surrender, Insurance.<br>
 ※Split時、ハンドがAAの場合、BJにならず、ターン終了。<br>
 ※Surrenderは、半額が払い戻される。<br>
-※Insurance成功時は、掛け金は没収され、保険金の2倍が払い戻され、保険金も帰ってくる。ex)$10の場合、-$10,$5(保険金),+$5*2 = ±0<br>
+※Insurance成功時は、掛け金は没収され、保険金の2倍が払い戻され、保険金も帰ってくる。<br>
+ex)$10の場合、-$10,$5(保険金),+$5*2 = ±0<br>
 (特殊ルール)<br>
 ・ジャックポッド<br>
 >ハンドが77の時に自動発生。<br>
@@ -29,7 +30,7 @@ SmallBet = $2, MaxBet = $1,000, ベット額は偶数限定。<br>
 
 <h3>*Buccarat*</h3>
 (Bet ルール)<br>
-SmallBet = $1, MaxBet = $1,000。<br>
+Minimum Bet = $1, Maximum Bet = $1,000。<br>
 (基本ルール)<br>
 Tie : 8 to 1<br>
 Banker : 95 to 100, 5%のコミッション。<br>
@@ -42,31 +43,31 @@ Player Pair : 未定<br>
 
 <h3>*No Commission Buccarat*</h3>
 (Bet ルール)<br>
-SmallBet = $1, MaxBet = $1,000, Bankerは偶数限定。<br>
+Minimum Bet = $1, Maximum Bet = $1,000<br>
 (基本ルール)<br>
 Tie : 8 to 1<br>
-Banker : 偶数限定 1 to 1<br>
-Player : 自由 1 to 1<br>
+Banker : 1 to 1<br>
+Player : 1 to 1<br>
 ※Bankerが6で勝ったときのみ、Bankerは3 to 2<br>
 
 <h3>*Pocker(Texas Hold'em)*</h3>
 (Bet ルール)<br>
-最低Bet = $2, No limit。<br>
+Minimum Bet = $2, No limit。<br>
 
 <h3>*Roulette*</h3>
 (Bet ルール)<br>
-SmallBet = $1, MaxBet = $1,000。<br>
+Minimum Bet = $1, Maximum Bet = $1,000。<br>
 
 <h3>*Big and Small*</h3>
 (Bet ルール)<br>
-SmallBet = $1, MaxBet = $1,000。<br>
+Minimum Bet = $1, Maximum Bet = $1,000。<br>
 
 <h3>*麻雀*</h3>
-・100点 = $1として換金(10,000点=$100)。<br>
+・100点 = $1として交換(10,000点=$100)。<br>
 kwsk<br>
 
 <h3>*High Limit 麻雀*</h3>
-・10点 = $1として換金(10,000点=$1,000)。<br>
+・10点 = $1として交換(10,000点=$1,000)。<br>
 kwsk<br>
 <button onclick="history.back()">戻る</button>
 {% endblock %}<br>
