--- a/templates/rulebook.html
+++ b/templates/rulebook.html
@@ -35,8 +35,9 @@ Minimum Bet = $1, Maximum Bet = $1,000。<br>
 Tie : 8 to 1<br>
 Banker : 95 to 100, 5%のコミッション。<br>
 Player : 1 to 1<br>
-Banker Pair : 未定<br>
-Player Pair : 未定<br>
+Banker Pair : 1 to 12<br>
+Player Pair : 1 to 12<br>
+Perfect Pair : 1 to 26 (Banker,Playerのどちらかのペアがスートも同じ場合)<br>
 ===<br>
 コミッションは、白,赤,緑,青,橙 = ¢1,¢5,¢25,¢100,¢500<br>
 ※コミッションは端数切り上げ。ex)¢1もゲーム終了時$1換算。<br>
