--- a/templates/login_check.html
+++ b/templates/login_check.html
@@ -6,5 +6,5 @@
 <h1>ご来店ありがとうございます。</h1>
 <br>
 <h2>最寄りのディーラーに、この画面をお見せください。</h2>
-<button onclick="location.href='/{{name}}/bank'">戻る</button>
+<button onclick="history.back()">戻る</button>
 {% endblock %}
