--- a/templates/rulebook.html
+++ b/templates/rulebook.html
@@ -6,12 +6,12 @@
 ・会員制の安心アミューズメントカジノ！<br>
 <br>
 ・来店時、$10のログインボーナスあり！<br>
->会員ランクによって最大 +$10 ボーナス！<br>
->さらにTOP3(純資産)の方には +$10 ボーナス！<br>
+>TOP3(純資産)の方には +$10 ボーナス！<br>
+>さらに会員ランクによって最大 +$10 ボーナス！<br>
 (会員ランク内訳)<br>
 >ゴールドランク : 利用回数50%以上(+$10)<br>
 >シルバーランク : 利用回数10%以上(+$5)<br>
-
+>ブロンズランク : アコムン利用者(-$10)
 
 <h3>*BJ*</h3>
 (Bet ルール)<br>
