--- a/templates/rulebook.html
+++ b/templates/rulebook.html
@@ -40,8 +40,11 @@ Banker Pair : 1 to 12<br>
 Player Pair : 1 to 12<br>
 Perfect Pair : 1 to 26 (Banker,Playerのどちらかのペアがスートも同じ場合)<br>
 ===<br>
-コミッションは、白,赤,緑,青,橙 = ¢1,¢5,¢25,¢100,¢500<br>
+コミッションは、白,赤,緑,青,橙 = ¢0,¢5,¢10,¢50,¢100<br>
 ※コミッションは端数切り上げ。ex)¢1もゲーム終了時$1換算。<br>
+※禁止手の魔法陣は2023/2/14より解禁。
+[ディーラー:つばきち, airi, つくだに]<br>
+[※研修はコミッションの半額支給。]<br>
 
 <h3>*No Commission Buccarat*</h3>
 (基本ルール)<br>
